WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38869
[Chromium] Chromium's SQLite VFS implementation on Linux doesn't need a dir fd
https://bugs.webkit.org/show_bug.cgi?id=38869
Summary
[Chromium] Chromium's SQLite VFS implementation on Linux doesn't need a dir fd
Dumitru Daniliuc
Reported
2010-05-10 14:49:29 PDT
SQLite's default VFS implementation on POSIX systems stores the file descriptor of the directory where all DB files are stored. SQLite uses dirfd to sync the DB files if it is compiled with -DSQLITE_NO_SYNC. Chromium compiles its SQLite library without -DSQLITE_NO_SYNC. Therefore, storing the dirfd is unnecessary and can actually be a security problem. We should clean up that code.
Attachments
patch
(5.66 KB, patch)
2010-05-10 19:31 PDT
,
Dumitru Daniliuc
dglazkov
: review+
dumi
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dumitru Daniliuc
Comment 1
2010-05-10 19:31:10 PDT
Created
attachment 55647
[details]
patch
Dimitri Glazkov (Google)
Comment 2
2010-05-12 13:46:06 PDT
Comment on
attachment 55647
[details]
patch ok.
Dumitru Daniliuc
Comment 3
2010-05-12 14:52:49 PDT
Landed as
r59273
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug