Removing the unnecessary dirfd parameter. https://bugs.webkit.org/show_bug.cgi?id=38869

Reviewed by Dimitri Glazkov.

WebCore:

* platform/chromium/ChromiumBridge.h:
* platform/sql/chromium/SQLiteFileSystemChromiumPosix.cpp:

WebKit/chromium:

* public/WebKitClient.h:
(WebKit::WebKitClient::databaseOpenFile):
* src/ChromiumBridge.cpp:
(WebCore::ChromiumBridge::databaseOpenFile):



Canonical link: https://commits.webkit.org/50507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59273 268f45cc-cd09-0410-ab3c-d52691b4dbfc