WebKit/chromium/src/ChromiumBridge.cpp
@@ -432,9 +432,9 @@ GeolocationServiceBridge* ChromiumBridge::createGeolocationServiceBridge(Geoloca
 // HTML5 DB -------------------------------------------------------------------
 
 #if ENABLE(DATABASE)
-PlatformFileHandle ChromiumBridge::databaseOpenFile(const String& vfsFileName, int desiredFlags, PlatformFileHandle* dirHandle)
+PlatformFileHandle ChromiumBridge::databaseOpenFile(const String& vfsFileName, int desiredFlags)
 {
-    return webKitClient()->databaseOpenFile(WebString(vfsFileName), desiredFlags, dirHandle);
+    return webKitClient()->databaseOpenFile(WebString(vfsFileName), desiredFlags);
 }
 
 int ChromiumBridge::databaseDeleteFile(const String& vfsFileName, bool syncDir)
